<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.login.ActivityLogin">

    <data>
        <variable
            name="viewModel"
            type="id.semisamadriver.app.ui.auth.ViewModelLogin" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/apps_name"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/labelLoginDescription"
                android:textColor="@color/black_90"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/labelEmail"
                android:textColor="@color/black_70"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:error="@{viewModel.emailError}"
                app:errorEnabled="@{viewModel.emailError != null}"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelHintEmail"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/labelPassword"
                android:textColor="@color/black_70"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:error="@{viewModel.passwordError}"
                app:errorEnabled="@{viewModel.passwordError != null}"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelHintPassword"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:enabled="@{viewModel.isButtonEnabled, default=false}"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{viewModel::onClickedLogin}"
                android:text="@string/labelLogin"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

        <include
            android:id="@+id/include2"
            layout="@layout/dialog_loading"
            app:visibility="@{viewModel.loadingVisibility}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

