<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.person.password.ActivityPassword">

    <data>
        <variable
            name="viewModel"
            type="id.semisamadriver.app.ui.person.password.ViewModelPassword" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            app:title="@{viewModel.title}"
            app:onNavigationBackClick="@{viewModel.onClickedUpButton}"
            layout="@layout/toolbar" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_100"
                android:text="@{viewModel.title}"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/labelRegister" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@={viewModel.desc}"
                android:textColor="@color/black_90"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/labelDescRegister" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/labelOldPassword"
                android:textColor="@color/black_70"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:error="@{viewModel.oldPasswordError}"
                app:errorEnabled="@{viewModel.oldPasswordError != null}"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelHintPassword"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@={viewModel.oldPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/labelNewPassword"
                android:textColor="@color/black_70"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:error="@{viewModel.passwordError}"
                app:errorEnabled="@{viewModel.passwordError != null}"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelHintPassword"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/labelNewPasswordConfirmation"
                android:textColor="@color/black_70"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:error="@{viewModel.passwordConfirmationError}"
                app:errorEnabled="@{viewModel.passwordConfirmationError != null}"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelHintPassword"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@={viewModel.passwordConfirmation}" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="32dp"
            android:enabled="@{viewModel.isButtonEnabled, default=false}"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{viewModel::onClickedConfirm}"
            android:text="@string/labelConfirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/include2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/include2"
            layout="@layout/dialog_loading"
            app:visibility="@{viewModel.loadingVisibility}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

